[package]
name = "rusty-moss"
version = "0.2.0"
authors = ["dwaris <dwaris@itclowd.de>"]
license = "BSD-2-Clause"
edition = "2024"

[dependencies]
poise = "0.6.1"
dotenvy = "0.15"
env_logger = "0.11.8"

[dependencies.tokio]
version = "1.49.0"
features = ["macros", "rt-multi-thread"]

[dependencies.serenity]
features = ["builder", "client", "gateway", "rustls_backend"]
version = "0.12.5"
